iowow (1.4.13) UNRELEASED; urgency=medium

  * Added iwp_set_current_thread_name() (iwp.h)
  * Added RCENO define (basedefs.h)
  * Thread poll, single thread worker fixes
  * Added IW_MIN, IW_MAX, IW_XSTR defines

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 21 Jul 2021 11:36:58 +0700

iowow (1.4.12) testing; urgency=medium

  * Added IW_ERROR_UNSUPPORTED error code
  * Added  IW_ALLOC __attribute__((malloc)) optimization
  * Added ring buffer implementation (iwrb.h)
  * Added `queue_blocking` argument `iwstw_start()` (iwstw.h)
  * Minor changes in iwlog.h api
  * `memcpy` replaced by `memmove` for overlaping cases (iwarr.c)

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 19 Jul 2021 10:09:05 +0700

iowow (1.4.11) testing; urgency=medium

  * Fixed typo (qsort_r => sort_r) (iwarr.c)
  * Added simple threads pool implementation (iwtp.h)
  * Added IW_ERROR_NOT_ALLOWED error code (iwlog.h)
  * Added RCR() error checking macro (basedefs.h)
  * Added iwlist_sort(), iwulist_sort() (iwarr.h)
  * Added iwstw_schedule_empty_only() (iwstw.h)
  * Added iwstw_queue_size() (iwstw.h)
  * Set O_CLOEXEC flag on all file open() calls
  * Added IW_ERROR_UNEXPECTED_RESPONSE error code (iwlog.h)
  * Added iwxstr_set_size(), iwxstr_destroy_keep_ptr() (iwxstr.h)
  * Added iwlist_at2() (iwarr.h)
  * Added handy ZRET definition (basedefs.h)
  * Added handy ZGO definition (basedefs.h)
  * Project code reformatted using uncrustify
  * Updated copyright headers
  * Fixed build errors on macOS
  * Removed dependency on glibc specific features
  * Added new iwxstr_pop() (iwxstr.h)

 -- Anton Adamansky <adamansky@gmail.com>  Mon, 10 May 2021 16:43:52 +0700

iowow (1.4.10) testing; urgency=medium

  * Tuned iwkv file resizing policy
  * Fixed misuse of `IWKV_OPTS.file_lock_fail_fast` (#35)
  * Correct handling of EINTR, EAGAIN in read/write functions (unix.c)

 -- Anton Adamansky <adamansky@gmail.com>  Tue, 22 Dec 2020 23:55:36 +0700

iowow (1.4.9) testing; urgency=medium
