@@ -95,6 +95,10 @@ IW_EXPORT char *iwpool_strndup(IWPOOL *pool, const char *str, size_t len, iwrc *
  */
 IW_EXPORT char *iwpool_strdup(IWPOOL *pool, const char *str, iwrc *rcp);
 
+IW_EXPORT char *iwpool_strdup2(IWPOOL *pool, const char *str);
+
+IW_EXPORT char *iwpool_strndup2(IWPOOL *pool, const char *str, size_t len);
+
 /**
  * @brief Do `fprintf` into string allocated in this memory pool.
  *
